fixing git issue [#1244] Alignment and styling issue in New file dialog box

--- a/web/css/menu-bar.css
+++ b/web/css/menu-bar.css
@@ -96,3 +96,6 @@ li.menu-item-disabled > a {
     color: #f47b20;
     text-transform: capitalize;
 }
+.btn{
+    border: 0;
+}
